<resources>
    <string name="app_name">Sharecipes</string>

    <!-- Recipe List Activity -->
    <string name="searchview_hint">chicken breast...</string>

    <!-- Authentication Activity -->
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
