<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <com.example.sharecipes.util.ui.HorizontalDottedProgress
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarProfile"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewProfileTitle"
                android:textSize="32dp"
                android:text="Profile"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editTextProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <EditText
                android:id="@+id/editTextProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/editTextProfilePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:id="@+id/buttonProfileSave"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/save"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="48dp"/>

            <Button
                android:id="@+id/buttonSignOut"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="48dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/sign_out"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/bottomNavigationViewProfile"
        android:background="@drawable/white_gray_border_top"
        android:layout_gravity="bottom"
        app:itemIconTint="@color/bottom_navigation_color"
        app:itemTextColor="@color/bottom_navigation_color"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>