<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.example.sharecipes.util.ui.HorizontalDottedProgress
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarSignIn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:alpha="1">

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="Sharecipes"
                    android:textColor="@color/black"
                    android:textSize="42dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="Share Your Recipes"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />

                <Button
                    android:id="@+id/buttonSignIn"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/sign_in"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="Don't have an account? click here."
                    android:textColor="@color/blue"
                    android:textSize="16dp"
                    android:textStyle="bold" />



            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>